<?xml version="1.0" encoding="UTF-8"?>
<!--

    Copyright 2023 tison <wander4096@gmail.com>

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

        http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.

-->
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.tisonkun.morax</groupId>
    <artifactId>morax-build-parent</artifactId>
    <version>0.1.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <!-- lib dependencies -->
        <assertj.version>3.24.2</assertj.version>
        <commons-lang3.version>3.13.0</commons-lang3.version>
        <grpc.version>1.58.0</grpc.version>
        <guava.version>32.1.2-jre</guava.version>
        <jackson.version>2.15.2</jackson.version>
        <jetbrains-annotations.version>24.0.1</jetbrains-annotations.version>
        <junit.version>5.9.2</junit.version>
        <lombok.version>1.18.30</lombok.version>
        <netty.version>4.1.97.Final</netty.version>
        <protobuf3.version>3.24.3</protobuf3.version>
        <protoc3.version>${protobuf3.version}</protoc3.version>
        <ratis.version>2.5.1</ratis.version>
        <ratis-thirdparty.version>1.0.4</ratis-thirdparty.version>
        <rocksdb.version>7.10.2</rocksdb.version>
        <slf4j.version>2.0.7</slf4j.version>
        <tomcat-annontation.version>6.0.53</tomcat-annontation.version>

        <!-- bundled maven plugins -->
        <maven-surefire-plugin.version>3.0.0-M7</maven-surefire-plugin.version>

        <!-- community maven plugins -->
        <spotless.version>2.39.0</spotless.version>
        <os-maven-plugin.version>1.7.1</os-maven-plugin.version>
        <palantir-java-format.version>2.36.0</palantir-java-format.version>
        <protobuf-maven-plugin.version>0.6.1</protobuf-maven-plugin.version>
    </properties>

    <modules>
        <module>morax-bom</module>
        <module>morax-parent</module>
        <module>morax-bookie</module>
        <module>morax-controller</module>
        <module>morax-proto</module>
        <module>morax-ctl</module>
    </modules>

    <build>
        <plugins>
            <plugin>
                <groupId>com.diffplug.spotless</groupId>
                <artifactId>spotless-maven-plugin</artifactId>
                <version>${spotless.version}</version>
                <configuration>
                    <formats>
                        <format>
                            <includes>
                                <include>*.md</include>
                                <include>.gitignore</include>
                                <include>pom.xml</include>
                            </includes>
                            <trimTrailingWhitespace/>
                            <endWithNewline/>
                            <indent>
                                <spaces>true</spaces>
                                <spacesPerTab>4</spacesPerTab>
                            </indent>
                        </format>
                    </formats>
                    <java>
                        <palantirJavaFormat>
                            <version>${palantir-java-format.version}</version>
                        </palantirJavaFormat>
                        <!-- static imports first, then others, no blank lines  -->
                        <importOrder>
                            <order>\#|</order>
                        </importOrder>
                        <removeUnusedImports/>
                        <trimTrailingWhitespace/>
                        <endWithNewline/>
                        <indent>
                            <spaces>true</spaces>
                            <spacesPerTab>4</spacesPerTab>
                        </indent>
                    </java>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
